fix: increase z-index for modal backdrop to improve visibility

--- a/assets/__endrock_testimonialCarousel.css
+++ b/assets/__endrock_testimonialCarousel.css
@@ -180,7 +180,7 @@
       width: 100vw;
       -webkit-backdrop-filter: blur(10px);
       backdrop-filter: blur(10px);
-      z-index: 100;
+      z-index: 1000;
       display: flex;
       justify-content: center;
       align-items: center;
